// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#1 - babel (default) - function (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": null,
  "params": "a, cb, restArgs",
}
`;

exports[`#2 - babel (default) - function (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": null,
  "params": "b, callback, restArgs",
}
`;

exports[`#3 - babel (default) - function (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": null,
  "params": "c",
}
`;

exports[`#4 - babel (default) - function (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": null,
  "params": "restArgs",
}
`;

exports[`#5 - babel (default) - function () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#6 - babel (default) - function (a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#7 - babel (default) - function (a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#8 - babel (default) - function (a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#9 - babel (default) - function (a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": null,
  "params": "a, b",
}
`;

exports[`#10 - babel (default) - function (a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#11 - babel (default) - function namedFn (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": "namedFn",
  "params": "a, cb, restArgs",
}
`;

exports[`#12 - babel (default) - function namedFn (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": "namedFn",
  "params": "b, callback, restArgs",
}
`;

exports[`#13 - babel (default) - function namedFn (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": "namedFn",
  "params": "c",
}
`;

exports[`#14 - babel (default) - function namedFn (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": "namedFn",
  "params": "restArgs",
}
`;

exports[`#15 - babel (default) - function namedFn () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": "namedFn",
  "params": "",
}
`;

exports[`#16 - babel (default) - function namedFn(a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#17 - babel (default) - function namedFn(a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#18 - babel (default) - function namedFn(a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#19 - babel (default) - function namedFn(a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a, b",
}
`;

exports[`#20 - babel (default) - function namedFn(a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#21 - babel (default) - function * namedFn (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": "namedFn",
  "params": "a, cb, restArgs",
}
`;

exports[`#22 - babel (default) - function * namedFn (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": "namedFn",
  "params": "b, callback, restArgs",
}
`;

exports[`#23 - babel (default) - function * namedFn (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": "namedFn",
  "params": "c",
}
`;

exports[`#24 - babel (default) - function * namedFn (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": "namedFn",
  "params": "restArgs",
}
`;

exports[`#25 - babel (default) - function * namedFn () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": "namedFn",
  "params": "",
}
`;

exports[`#26 - babel (default) - function * namedFn(a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#27 - babel (default) - function * namedFn(a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#28 - babel (default) - function * namedFn(a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#29 - babel (default) - function * namedFn(a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a, b",
}
`;

exports[`#30 - babel (default) - function * namedFn(a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#31 - babel (default) - a = {foo: "ba)r", baz: 123}, cb, ...restArgs) => {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": null,
  "params": "a, cb, restArgs",
}
`;

exports[`#32 - babel (default) - b, callback, ...restArgs) => {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": null,
  "params": "b, callback, restArgs",
}
`;

exports[`#33 - babel (default) - c) => {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": null,
  "params": "c",
}
`;

exports[`#34 - babel (default) - ...restArgs) => {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": null,
  "params": "restArgs",
}
`;

exports[`#35 - babel (default) - ) => {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#36 - babel (default) - a = (true, false)) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#37 - babel (default) - a = (true, null)) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#38 - babel (default) - a = (true, "bar")) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#39 - babel (default) - a, b = (i++, true)) => {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": null,
  "params": "a, b",
}
`;

exports[`#40 - babel (default) - a = 1) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#41 - babel (default) - a) => a * 3 * a 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "a * 3 * a",
  "name": null,
  "params": "a",
}
`;

exports[`#42 - babel (default) - d => d * 355 * d 1`] = `
Object {
  "args": Array [
    "d",
  ],
  "body": "d * 355 * d",
  "name": null,
  "params": "d",
}
`;

exports[`#43 - babel (default) - e => {return e + 5235 / e} 1`] = `
Object {
  "args": Array [
    "e",
  ],
  "body": "return e + 5235 / e",
  "name": null,
  "params": "e",
}
`;

exports[`#44 - babel (default) - a, b) => a + 3 + b 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "a + 3 + b",
  "name": null,
  "params": "a, b",
}
`;

exports[`#45 - babel (default) - x, y, ...restArgs) => console.log({ value: x * y } 1`] = `
Object {
  "args": Array [
    "x",
    "y",
    "restArgs",
  ],
  "body": "console.log({ value: x * y })",
  "name": null,
  "params": "x, y, restArgs",
}
`;

exports[`#46 - babel (default) - async function (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": null,
  "params": "a, cb, restArgs",
}
`;

exports[`#47 - babel (default) - async function (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": null,
  "params": "b, callback, restArgs",
}
`;

exports[`#48 - babel (default) - async function (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": null,
  "params": "c",
}
`;

exports[`#49 - babel (default) - async function (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": null,
  "params": "restArgs",
}
`;

exports[`#50 - babel (default) - async function () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#51 - babel (default) - async function (a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#52 - babel (default) - async function (a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#53 - babel (default) - async function (a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#54 - babel (default) - async function (a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": null,
  "params": "a, b",
}
`;

exports[`#55 - babel (default) - async function (a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#56 - babel (default) - async function namedFn (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": "namedFn",
  "params": "a, cb, restArgs",
}
`;

exports[`#57 - babel (default) - async function namedFn (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": "namedFn",
  "params": "b, callback, restArgs",
}
`;

exports[`#58 - babel (default) - async function namedFn (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": "namedFn",
  "params": "c",
}
`;

exports[`#59 - babel (default) - async function namedFn (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": "namedFn",
  "params": "restArgs",
}
`;

exports[`#60 - babel (default) - async function namedFn () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": "namedFn",
  "params": "",
}
`;

exports[`#61 - babel (default) - async function namedFn(a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#62 - babel (default) - async function namedFn(a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#63 - babel (default) - async function namedFn(a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#64 - babel (default) - async function namedFn(a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a, b",
}
`;

exports[`#65 - babel (default) - async function namedFn(a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#66 - babel (default) - async (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) => {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": null,
  "params": "a, cb, restArgs",
}
`;

exports[`#67 - babel (default) - async (b, callback, ...restArgs) => {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": null,
  "params": "b, callback, restArgs",
}
`;

exports[`#68 - babel (default) - async (c) => {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": null,
  "params": "c",
}
`;

exports[`#69 - babel (default) - async (...restArgs) => {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": null,
  "params": "restArgs",
}
`;

exports[`#70 - babel (default) - async () => {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#71 - babel (default) - async (a = (true, false)) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#72 - babel (default) - async (a = (true, null)) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#73 - babel (default) - async (a = (true, "bar")) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#74 - babel (default) - async (a, b = (i++, true)) => {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": null,
  "params": "a, b",
}
`;

exports[`#75 - babel (default) - async (a = 1) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#76 - babel (default) - async (a) => a * 3 * a 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "a * 3 * a",
  "name": null,
  "params": "a",
}
`;

exports[`#77 - babel (default) - async d => d * 355 * d 1`] = `
Object {
  "args": Array [
    "d",
  ],
  "body": "d * 355 * d",
  "name": null,
  "params": "d",
}
`;

exports[`#78 - babel (default) - async e => {return e + 5235 / e} 1`] = `
Object {
  "args": Array [
    "e",
  ],
  "body": "return e + 5235 / e",
  "name": null,
  "params": "e",
}
`;

exports[`#79 - babel (default) - async (a, b) => a + 3 + b 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "a + 3 + b",
  "name": null,
  "params": "a, b",
}
`;

exports[`#80 - babel (default) - async (x, y, ...restArgs) => console.log({ value: x * y } 1`] = `
Object {
  "args": Array [
    "x",
    "y",
    "restArgs",
  ],
  "body": "console.log({ value: x * y })",
  "name": null,
  "params": "x, y, restArgs",
}
`;

exports[`#81 - babel (default) - should return object with default values when invalid 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#82 - babel (default) - should have '.isValid' and few '.is*'' hidden properties 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#87 - babel (default) - should work for object methods 1`] = `
Object {
  "args": Array [
    "a",
    "b",
    "c",
  ],
  "body": "
        return 123;
      ",
  "name": "foo",
  "params": "a, b, c",
}
`;

exports[`#87 - babel (default) - should work for object methods 2`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "
        return () => a;
      ",
  "name": "bar",
  "params": "a",
}
`;

exports[`#87 - babel (default) - should work for object methods 3`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "
        return yield a * 321;
      ",
  "name": "gen",
  "params": "a",
}
`;

exports[`#87 - babel (default) - should work for object methods 4`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": " return a * 3 ",
  "name": "namedFn",
  "params": "a, cb, restArgs",
}
`;

exports[`#91 - options.parse + ecmaVersion: 2019 - function (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": null,
  "params": "a, cb, restArgs",
}
`;

exports[`#92 - options.parse + ecmaVersion: 2019 - function (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": null,
  "params": "b, callback, restArgs",
}
`;

exports[`#93 - options.parse + ecmaVersion: 2019 - function (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": null,
  "params": "c",
}
`;

exports[`#94 - options.parse + ecmaVersion: 2019 - function (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": null,
  "params": "restArgs",
}
`;

exports[`#95 - options.parse + ecmaVersion: 2019 - function () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#96 - options.parse + ecmaVersion: 2019 - function (a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#97 - options.parse + ecmaVersion: 2019 - function (a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#98 - options.parse + ecmaVersion: 2019 - function (a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#99 - options.parse + ecmaVersion: 2019 - function (a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": null,
  "params": "a, b",
}
`;

exports[`#100 - options.parse + ecmaVersion: 2019 - function (a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#101 - options.parse + ecmaVersion: 2019 - function namedFn (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": "namedFn",
  "params": "a, cb, restArgs",
}
`;

exports[`#102 - options.parse + ecmaVersion: 2019 - function namedFn (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": "namedFn",
  "params": "b, callback, restArgs",
}
`;

exports[`#103 - options.parse + ecmaVersion: 2019 - function namedFn (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": "namedFn",
  "params": "c",
}
`;

exports[`#104 - options.parse + ecmaVersion: 2019 - function namedFn (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": "namedFn",
  "params": "restArgs",
}
`;

exports[`#105 - options.parse + ecmaVersion: 2019 - function namedFn () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": "namedFn",
  "params": "",
}
`;

exports[`#106 - options.parse + ecmaVersion: 2019 - function namedFn(a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#107 - options.parse + ecmaVersion: 2019 - function namedFn(a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#108 - options.parse + ecmaVersion: 2019 - function namedFn(a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#109 - options.parse + ecmaVersion: 2019 - function namedFn(a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a, b",
}
`;

exports[`#110 - options.parse + ecmaVersion: 2019 - function namedFn(a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#111 - options.parse + ecmaVersion: 2019 - function * namedFn (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": "namedFn",
  "params": "a, cb, restArgs",
}
`;

exports[`#112 - options.parse + ecmaVersion: 2019 - function * namedFn (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": "namedFn",
  "params": "b, callback, restArgs",
}
`;

exports[`#113 - options.parse + ecmaVersion: 2019 - function * namedFn (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": "namedFn",
  "params": "c",
}
`;

exports[`#114 - options.parse + ecmaVersion: 2019 - function * namedFn (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": "namedFn",
  "params": "restArgs",
}
`;

exports[`#115 - options.parse + ecmaVersion: 2019 - function * namedFn () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": "namedFn",
  "params": "",
}
`;

exports[`#116 - options.parse + ecmaVersion: 2019 - function * namedFn(a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#117 - options.parse + ecmaVersion: 2019 - function * namedFn(a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#118 - options.parse + ecmaVersion: 2019 - function * namedFn(a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#119 - options.parse + ecmaVersion: 2019 - function * namedFn(a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a, b",
}
`;

exports[`#120 - options.parse + ecmaVersion: 2019 - function * namedFn(a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#121 - options.parse + ecmaVersion: 2019 - (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) => {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": null,
  "params": "a, cb, restArgs",
}
`;

exports[`#122 - options.parse + ecmaVersion: 2019 - (b, callback, ...restArgs) => {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": null,
  "params": "b, callback, restArgs",
}
`;

exports[`#123 - options.parse + ecmaVersion: 2019 - (c) => {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": null,
  "params": "c",
}
`;

exports[`#124 - options.parse + ecmaVersion: 2019 - (...restArgs) => {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": null,
  "params": "restArgs",
}
`;

exports[`#125 - options.parse + ecmaVersion: 2019 - () => {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#126 - options.parse + ecmaVersion: 2019 - (a = (true, false)) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#127 - options.parse + ecmaVersion: 2019 - (a = (true, null)) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#128 - options.parse + ecmaVersion: 2019 - (a = (true, "bar")) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#129 - options.parse + ecmaVersion: 2019 - (a, b = (i++, true)) => {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": null,
  "params": "a, b",
}
`;

exports[`#130 - options.parse + ecmaVersion: 2019 - (a = 1) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#131 - options.parse + ecmaVersion: 2019 - (a) => a * 3 * a 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "a * 3 * a",
  "name": null,
  "params": "a",
}
`;

exports[`#132 - options.parse + ecmaVersion: 2019 - d => d * 355 * d 1`] = `
Object {
  "args": Array [
    "d",
  ],
  "body": "d * 355 * d",
  "name": null,
  "params": "d",
}
`;

exports[`#133 - options.parse + ecmaVersion: 2019 - e => {return e + 5235 / e} 1`] = `
Object {
  "args": Array [
    "e",
  ],
  "body": "return e + 5235 / e",
  "name": null,
  "params": "e",
}
`;

exports[`#134 - options.parse + ecmaVersion: 2019 - (a, b) => a + 3 + b 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "a + 3 + b",
  "name": null,
  "params": "a, b",
}
`;

exports[`#135 - options.parse + ecmaVersion: 2019 - (x, y, ...restArgs) => console.log({ value: x * y }) 1`] = `
Object {
  "args": Array [
    "x",
    "y",
    "restArgs",
  ],
  "body": "console.log({ value: x * y })",
  "name": null,
  "params": "x, y, restArgs",
}
`;

exports[`#136 - options.parse + ecmaVersion: 2019 - async function (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": null,
  "params": "a, cb, restArgs",
}
`;

exports[`#137 - options.parse + ecmaVersion: 2019 - async function (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": null,
  "params": "b, callback, restArgs",
}
`;

exports[`#138 - options.parse + ecmaVersion: 2019 - async function (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": null,
  "params": "c",
}
`;

exports[`#139 - options.parse + ecmaVersion: 2019 - async function (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": null,
  "params": "restArgs",
}
`;

exports[`#140 - options.parse + ecmaVersion: 2019 - async function () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#141 - options.parse + ecmaVersion: 2019 - async function (a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#142 - options.parse + ecmaVersion: 2019 - async function (a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#143 - options.parse + ecmaVersion: 2019 - async function (a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#144 - options.parse + ecmaVersion: 2019 - async function (a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": null,
  "params": "a, b",
}
`;

exports[`#145 - options.parse + ecmaVersion: 2019 - async function (a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#146 - options.parse + ecmaVersion: 2019 - async function namedFn (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": "namedFn",
  "params": "a, cb, restArgs",
}
`;

exports[`#147 - options.parse + ecmaVersion: 2019 - async function namedFn (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": "namedFn",
  "params": "b, callback, restArgs",
}
`;

exports[`#148 - options.parse + ecmaVersion: 2019 - async function namedFn (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": "namedFn",
  "params": "c",
}
`;

exports[`#149 - options.parse + ecmaVersion: 2019 - async function namedFn (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": "namedFn",
  "params": "restArgs",
}
`;

exports[`#150 - options.parse + ecmaVersion: 2019 - async function namedFn () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": "namedFn",
  "params": "",
}
`;

exports[`#151 - options.parse + ecmaVersion: 2019 - async function namedFn(a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#152 - options.parse + ecmaVersion: 2019 - async function namedFn(a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#153 - options.parse + ecmaVersion: 2019 - async function namedFn(a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#154 - options.parse + ecmaVersion: 2019 - async function namedFn(a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a, b",
}
`;

exports[`#155 - options.parse + ecmaVersion: 2019 - async function namedFn(a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#156 - options.parse + ecmaVersion: 2019 - async (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) => {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": null,
  "params": "a, cb, restArgs",
}
`;

exports[`#157 - options.parse + ecmaVersion: 2019 - async (b, callback, ...restArgs) => {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": null,
  "params": "b, callback, restArgs",
}
`;

exports[`#158 - options.parse + ecmaVersion: 2019 - async (c) => {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": null,
  "params": "c",
}
`;

exports[`#159 - options.parse + ecmaVersion: 2019 - async (...restArgs) => {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": null,
  "params": "restArgs",
}
`;

exports[`#160 - options.parse + ecmaVersion: 2019 - async () => {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#161 - options.parse + ecmaVersion: 2019 - async (a = (true, false)) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#162 - options.parse + ecmaVersion: 2019 - async (a = (true, null)) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#163 - options.parse + ecmaVersion: 2019 - async (a = (true, "bar")) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#164 - options.parse + ecmaVersion: 2019 - async (a, b = (i++, true)) => {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": null,
  "params": "a, b",
}
`;

exports[`#165 - options.parse + ecmaVersion: 2019 - async (a = 1) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#166 - options.parse + ecmaVersion: 2019 - async (a) => a * 3 * a 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "a * 3 * a",
  "name": null,
  "params": "a",
}
`;

exports[`#167 - options.parse + ecmaVersion: 2019 - async d => d * 355 * d 1`] = `
Object {
  "args": Array [
    "d",
  ],
  "body": "d * 355 * d",
  "name": null,
  "params": "d",
}
`;

exports[`#168 - options.parse + ecmaVersion: 2019 - async e => {return e + 5235 / e} 1`] = `
Object {
  "args": Array [
    "e",
  ],
  "body": "return e + 5235 / e",
  "name": null,
  "params": "e",
}
`;

exports[`#169 - options.parse + ecmaVersion: 2019 - async (a, b) => a + 3 + b 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "a + 3 + b",
  "name": null,
  "params": "a, b",
}
`;

exports[`#170 - options.parse + ecmaVersion: 2019 - async (x, y, ...restArgs) => console.log({ value: x * y }) 1`] = `
Object {
  "args": Array [
    "x",
    "y",
    "restArgs",
  ],
  "body": "console.log({ value: x * y })",
  "name": null,
  "params": "x, y, restArgs",
}
`;

exports[`#171 - options.parse + ecmaVersion: 2019 - should return object with default values when invalid 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#172 - options.parse + ecmaVersion: 2019 - should have '.isValid' and few '.is*'' hidden properties 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#177 - options.parse + ecmaVersion: 2019 - should work for object methods 1`] = `
Object {
  "args": Array [
    "a",
    "b",
    "c",
  ],
  "body": "
        return 123;
      ",
  "name": "foo",
  "params": "a, b, c",
}
`;

exports[`#177 - options.parse + ecmaVersion: 2019 - should work for object methods 2`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "
        return () => a;
      ",
  "name": "bar",
  "params": "a",
}
`;

exports[`#177 - options.parse + ecmaVersion: 2019 - should work for object methods 3`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "
        return yield a * 321;
      ",
  "name": "gen",
  "params": "a",
}
`;

exports[`#177 - options.parse + ecmaVersion: 2019 - should work for object methods 4`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": " return a * 3 ",
  "name": "namedFn",
  "params": "a, cb, restArgs",
}
`;

exports[`#181 - acorn.parse - function (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": null,
  "params": "a, cb, restArgs",
}
`;

exports[`#182 - acorn.parse - function (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": null,
  "params": "b, callback, restArgs",
}
`;

exports[`#183 - acorn.parse - function (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": null,
  "params": "c",
}
`;

exports[`#184 - acorn.parse - function (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": null,
  "params": "restArgs",
}
`;

exports[`#185 - acorn.parse - function () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#186 - acorn.parse - function (a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#187 - acorn.parse - function (a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#188 - acorn.parse - function (a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#189 - acorn.parse - function (a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": null,
  "params": "a, b",
}
`;

exports[`#190 - acorn.parse - function (a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#191 - acorn.parse - function namedFn (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": "namedFn",
  "params": "a, cb, restArgs",
}
`;

exports[`#192 - acorn.parse - function namedFn (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": "namedFn",
  "params": "b, callback, restArgs",
}
`;

exports[`#193 - acorn.parse - function namedFn (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": "namedFn",
  "params": "c",
}
`;

exports[`#194 - acorn.parse - function namedFn (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": "namedFn",
  "params": "restArgs",
}
`;

exports[`#195 - acorn.parse - function namedFn () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": "namedFn",
  "params": "",
}
`;

exports[`#196 - acorn.parse - function namedFn(a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#197 - acorn.parse - function namedFn(a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#198 - acorn.parse - function namedFn(a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#199 - acorn.parse - function namedFn(a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a, b",
}
`;

exports[`#200 - acorn.parse - function namedFn(a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#201 - acorn.parse - function * namedFn (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": "namedFn",
  "params": "a, cb, restArgs",
}
`;

exports[`#202 - acorn.parse - function * namedFn (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": "namedFn",
  "params": "b, callback, restArgs",
}
`;

exports[`#203 - acorn.parse - function * namedFn (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": "namedFn",
  "params": "c",
}
`;

exports[`#204 - acorn.parse - function * namedFn (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": "namedFn",
  "params": "restArgs",
}
`;

exports[`#205 - acorn.parse - function * namedFn () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": "namedFn",
  "params": "",
}
`;

exports[`#206 - acorn.parse - function * namedFn(a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#207 - acorn.parse - function * namedFn(a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#208 - acorn.parse - function * namedFn(a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#209 - acorn.parse - function * namedFn(a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a, b",
}
`;

exports[`#210 - acorn.parse - function * namedFn(a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#211 - acorn.parse - (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) => {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": null,
  "params": "a, cb, restArgs",
}
`;

exports[`#212 - acorn.parse - (b, callback, ...restArgs) => {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": null,
  "params": "b, callback, restArgs",
}
`;

exports[`#213 - acorn.parse - (c) => {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": null,
  "params": "c",
}
`;

exports[`#214 - acorn.parse - (...restArgs) => {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": null,
  "params": "restArgs",
}
`;

exports[`#215 - acorn.parse - () => {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#216 - acorn.parse - (a = (true, false)) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#217 - acorn.parse - (a = (true, null)) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#218 - acorn.parse - (a = (true, "bar")) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#219 - acorn.parse - (a, b = (i++, true)) => {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": null,
  "params": "a, b",
}
`;

exports[`#220 - acorn.parse - (a = 1) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#221 - acorn.parse - (a) => a * 3 * a 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "a * 3 * a",
  "name": null,
  "params": "a",
}
`;

exports[`#222 - acorn.parse - d => d * 355 * d 1`] = `
Object {
  "args": Array [
    "d",
  ],
  "body": "d * 355 * d",
  "name": null,
  "params": "d",
}
`;

exports[`#223 - acorn.parse - e => {return e + 5235 / e} 1`] = `
Object {
  "args": Array [
    "e",
  ],
  "body": "return e + 5235 / e",
  "name": null,
  "params": "e",
}
`;

exports[`#224 - acorn.parse - (a, b) => a + 3 + b 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "a + 3 + b",
  "name": null,
  "params": "a, b",
}
`;

exports[`#225 - acorn.parse - (x, y, ...restArgs) => console.log({ value: x * y }) 1`] = `
Object {
  "args": Array [
    "x",
    "y",
    "restArgs",
  ],
  "body": "console.log({ value: x * y })",
  "name": null,
  "params": "x, y, restArgs",
}
`;

exports[`#226 - acorn.parse - async function (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": null,
  "params": "a, cb, restArgs",
}
`;

exports[`#227 - acorn.parse - async function (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": null,
  "params": "b, callback, restArgs",
}
`;

exports[`#228 - acorn.parse - async function (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": null,
  "params": "c",
}
`;

exports[`#229 - acorn.parse - async function (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": null,
  "params": "restArgs",
}
`;

exports[`#230 - acorn.parse - async function () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#231 - acorn.parse - async function (a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#232 - acorn.parse - async function (a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#233 - acorn.parse - async function (a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#234 - acorn.parse - async function (a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": null,
  "params": "a, b",
}
`;

exports[`#235 - acorn.parse - async function (a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#236 - acorn.parse - async function namedFn (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": "namedFn",
  "params": "a, cb, restArgs",
}
`;

exports[`#237 - acorn.parse - async function namedFn (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": "namedFn",
  "params": "b, callback, restArgs",
}
`;

exports[`#238 - acorn.parse - async function namedFn (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": "namedFn",
  "params": "c",
}
`;

exports[`#239 - acorn.parse - async function namedFn (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": "namedFn",
  "params": "restArgs",
}
`;

exports[`#240 - acorn.parse - async function namedFn () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": "namedFn",
  "params": "",
}
`;

exports[`#241 - acorn.parse - async function namedFn(a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#242 - acorn.parse - async function namedFn(a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#243 - acorn.parse - async function namedFn(a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#244 - acorn.parse - async function namedFn(a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a, b",
}
`;

exports[`#245 - acorn.parse - async function namedFn(a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#246 - acorn.parse - async (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) => {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": null,
  "params": "a, cb, restArgs",
}
`;

exports[`#247 - acorn.parse - async (b, callback, ...restArgs) => {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": null,
  "params": "b, callback, restArgs",
}
`;

exports[`#248 - acorn.parse - async (c) => {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": null,
  "params": "c",
}
`;

exports[`#249 - acorn.parse - async (...restArgs) => {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": null,
  "params": "restArgs",
}
`;

exports[`#250 - acorn.parse - async () => {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#251 - acorn.parse - async (a = (true, false)) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#252 - acorn.parse - async (a = (true, null)) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#253 - acorn.parse - async (a = (true, "bar")) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#254 - acorn.parse - async (a, b = (i++, true)) => {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": null,
  "params": "a, b",
}
`;

exports[`#255 - acorn.parse - async (a = 1) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#256 - acorn.parse - async (a) => a * 3 * a 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "a * 3 * a",
  "name": null,
  "params": "a",
}
`;

exports[`#257 - acorn.parse - async d => d * 355 * d 1`] = `
Object {
  "args": Array [
    "d",
  ],
  "body": "d * 355 * d",
  "name": null,
  "params": "d",
}
`;

exports[`#258 - acorn.parse - async e => {return e + 5235 / e} 1`] = `
Object {
  "args": Array [
    "e",
  ],
  "body": "return e + 5235 / e",
  "name": null,
  "params": "e",
}
`;

exports[`#259 - acorn.parse - async (a, b) => a + 3 + b 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "a + 3 + b",
  "name": null,
  "params": "a, b",
}
`;

exports[`#260 - acorn.parse - async (x, y, ...restArgs) => console.log({ value: x * y }) 1`] = `
Object {
  "args": Array [
    "x",
    "y",
    "restArgs",
  ],
  "body": "console.log({ value: x * y })",
  "name": null,
  "params": "x, y, restArgs",
}
`;

exports[`#261 - acorn.parse - should return object with default values when invalid 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#262 - acorn.parse - should have '.isValid' and few '.is*'' hidden properties 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#267 - acorn.parse - should work for object methods 1`] = `
Object {
  "args": Array [
    "a",
    "b",
    "c",
  ],
  "body": "
        return 123;
      ",
  "name": "foo",
  "params": "a, b, c",
}
`;

exports[`#267 - acorn.parse - should work for object methods 2`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "
        return () => a;
      ",
  "name": "bar",
  "params": "a",
}
`;

exports[`#267 - acorn.parse - should work for object methods 3`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "
        return yield a * 321;
      ",
  "name": "gen",
  "params": "a",
}
`;

exports[`#267 - acorn.parse - should work for object methods 4`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": " return a * 3 ",
  "name": "namedFn",
  "params": "a, cb, restArgs",
}
`;

exports[`#271 - acorn loose - function (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": null,
  "params": "a, cb, restArgs",
}
`;

exports[`#272 - acorn loose - function (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": null,
  "params": "b, callback, restArgs",
}
`;

exports[`#273 - acorn loose - function (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": null,
  "params": "c",
}
`;

exports[`#274 - acorn loose - function (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": null,
  "params": "restArgs",
}
`;

exports[`#275 - acorn loose - function () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#276 - acorn loose - function (a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#277 - acorn loose - function (a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#278 - acorn loose - function (a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#279 - acorn loose - function (a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": null,
  "params": "a, b",
}
`;

exports[`#280 - acorn loose - function (a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#281 - acorn loose - function namedFn (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": "namedFn",
  "params": "a, cb, restArgs",
}
`;

exports[`#282 - acorn loose - function namedFn (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": "namedFn",
  "params": "b, callback, restArgs",
}
`;

exports[`#283 - acorn loose - function namedFn (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": "namedFn",
  "params": "c",
}
`;

exports[`#284 - acorn loose - function namedFn (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": "namedFn",
  "params": "restArgs",
}
`;

exports[`#285 - acorn loose - function namedFn () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": "namedFn",
  "params": "",
}
`;

exports[`#286 - acorn loose - function namedFn(a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#287 - acorn loose - function namedFn(a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#288 - acorn loose - function namedFn(a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#289 - acorn loose - function namedFn(a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a, b",
}
`;

exports[`#290 - acorn loose - function namedFn(a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#291 - acorn loose - function * namedFn (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": "namedFn",
  "params": "a, cb, restArgs",
}
`;

exports[`#292 - acorn loose - function * namedFn (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": "namedFn",
  "params": "b, callback, restArgs",
}
`;

exports[`#293 - acorn loose - function * namedFn (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": "namedFn",
  "params": "c",
}
`;

exports[`#294 - acorn loose - function * namedFn (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": "namedFn",
  "params": "restArgs",
}
`;

exports[`#295 - acorn loose - function * namedFn () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": "namedFn",
  "params": "",
}
`;

exports[`#296 - acorn loose - function * namedFn(a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#297 - acorn loose - function * namedFn(a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#298 - acorn loose - function * namedFn(a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#299 - acorn loose - function * namedFn(a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a, b",
}
`;

exports[`#300 - acorn loose - function * namedFn(a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#301 - acorn loose - (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) => {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": null,
  "params": "a, cb, restArgs",
}
`;

exports[`#302 - acorn loose - (b, callback, ...restArgs) => {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": null,
  "params": "b, callback, restArgs",
}
`;

exports[`#303 - acorn loose - (c) => {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": null,
  "params": "c",
}
`;

exports[`#304 - acorn loose - (...restArgs) => {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": null,
  "params": "restArgs",
}
`;

exports[`#305 - acorn loose - () => {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#306 - acorn loose - (a = (true, false)) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#307 - acorn loose - (a = (true, null)) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#308 - acorn loose - (a = (true, "bar")) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#309 - acorn loose - (a, b = (i++, true)) => {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": null,
  "params": "a, b",
}
`;

exports[`#310 - acorn loose - (a = 1) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#311 - acorn loose - (a) => a * 3 * a 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "a * 3 * a",
  "name": null,
  "params": "a",
}
`;

exports[`#312 - acorn loose - d => d * 355 * d 1`] = `
Object {
  "args": Array [
    "d",
  ],
  "body": "d * 355 * d",
  "name": null,
  "params": "d",
}
`;

exports[`#313 - acorn loose - e => {return e + 5235 / e} 1`] = `
Object {
  "args": Array [
    "e",
  ],
  "body": "return e + 5235 / e",
  "name": null,
  "params": "e",
}
`;

exports[`#314 - acorn loose - (a, b) => a + 3 + b 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "a + 3 + b",
  "name": null,
  "params": "a, b",
}
`;

exports[`#315 - acorn loose - (x, y, ...restArgs) => console.log({ value: x * y }) 1`] = `
Object {
  "args": Array [
    "x",
    "y",
    "restArgs",
  ],
  "body": "console.log({ value: x * y })",
  "name": null,
  "params": "x, y, restArgs",
}
`;

exports[`#316 - acorn loose - async function (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": null,
  "params": "a, cb, restArgs",
}
`;

exports[`#317 - acorn loose - async function (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": null,
  "params": "b, callback, restArgs",
}
`;

exports[`#318 - acorn loose - async function (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": null,
  "params": "c",
}
`;

exports[`#319 - acorn loose - async function (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": null,
  "params": "restArgs",
}
`;

exports[`#320 - acorn loose - async function () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#321 - acorn loose - async function (a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#322 - acorn loose - async function (a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#323 - acorn loose - async function (a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#324 - acorn loose - async function (a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": null,
  "params": "a, b",
}
`;

exports[`#325 - acorn loose - async function (a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#326 - acorn loose - async function namedFn (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": "namedFn",
  "params": "a, cb, restArgs",
}
`;

exports[`#327 - acorn loose - async function namedFn (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": "namedFn",
  "params": "b, callback, restArgs",
}
`;

exports[`#328 - acorn loose - async function namedFn (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": "namedFn",
  "params": "c",
}
`;

exports[`#329 - acorn loose - async function namedFn (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": "namedFn",
  "params": "restArgs",
}
`;

exports[`#330 - acorn loose - async function namedFn () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": "namedFn",
  "params": "",
}
`;

exports[`#331 - acorn loose - async function namedFn(a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#332 - acorn loose - async function namedFn(a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#333 - acorn loose - async function namedFn(a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#334 - acorn loose - async function namedFn(a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a, b",
}
`;

exports[`#335 - acorn loose - async function namedFn(a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#336 - acorn loose - async (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) => {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": null,
  "params": "a, cb, restArgs",
}
`;

exports[`#337 - acorn loose - async (b, callback, ...restArgs) => {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": null,
  "params": "b, callback, restArgs",
}
`;

exports[`#338 - acorn loose - async (c) => {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": null,
  "params": "c",
}
`;

exports[`#339 - acorn loose - async (...restArgs) => {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": null,
  "params": "restArgs",
}
`;

exports[`#340 - acorn loose - async () => {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#341 - acorn loose - async (a = (true, false)) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#342 - acorn loose - async (a = (true, null)) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#343 - acorn loose - async (a = (true, "bar")) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#344 - acorn loose - async (a, b = (i++, true)) => {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": null,
  "params": "a, b",
}
`;

exports[`#345 - acorn loose - async (a = 1) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#346 - acorn loose - async (a) => a * 3 * a 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "a * 3 * a",
  "name": null,
  "params": "a",
}
`;

exports[`#347 - acorn loose - async d => d * 355 * d 1`] = `
Object {
  "args": Array [
    "d",
  ],
  "body": "d * 355 * d",
  "name": null,
  "params": "d",
}
`;

exports[`#348 - acorn loose - async e => {return e + 5235 / e} 1`] = `
Object {
  "args": Array [
    "e",
  ],
  "body": "return e + 5235 / e",
  "name": null,
  "params": "e",
}
`;

exports[`#349 - acorn loose - async (a, b) => a + 3 + b 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "a + 3 + b",
  "name": null,
  "params": "a, b",
}
`;

exports[`#350 - acorn loose - async (x, y, ...restArgs) => console.log({ value: x * y }) 1`] = `
Object {
  "args": Array [
    "x",
    "y",
    "restArgs",
  ],
  "body": "console.log({ value: x * y })",
  "name": null,
  "params": "x, y, restArgs",
}
`;

exports[`#351 - acorn loose - should return object with default values when invalid 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#352 - acorn loose - should have '.isValid' and few '.is*'' hidden properties 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#357 - acorn loose - should work for object methods 1`] = `
Object {
  "args": Array [
    "a",
    "b",
    "c",
  ],
  "body": "
        return 123;
      ",
  "name": "foo",
  "params": "a, b, c",
}
`;

exports[`#357 - acorn loose - should work for object methods 2`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "
        return () => a;
      ",
  "name": "bar",
  "params": "a",
}
`;

exports[`#357 - acorn loose - should work for object methods 3`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "
        return yield a * 321;
      ",
  "name": "gen",
  "params": "a",
}
`;

exports[`#357 - acorn loose - should work for object methods 4`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": " return a * 3 ",
  "name": "namedFn",
  "params": "a, cb, restArgs",
}
`;

exports[`#361 - espree.parse - function (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": null,
  "params": "a, cb, restArgs",
}
`;

exports[`#362 - espree.parse - function (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": null,
  "params": "b, callback, restArgs",
}
`;

exports[`#363 - espree.parse - function (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": null,
  "params": "c",
}
`;

exports[`#364 - espree.parse - function (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": null,
  "params": "restArgs",
}
`;

exports[`#365 - espree.parse - function () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#366 - espree.parse - function (a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#367 - espree.parse - function (a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#368 - espree.parse - function (a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#369 - espree.parse - function (a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": null,
  "params": "a, b",
}
`;

exports[`#370 - espree.parse - function (a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#371 - espree.parse - function namedFn (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": "namedFn",
  "params": "a, cb, restArgs",
}
`;

exports[`#372 - espree.parse - function namedFn (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": "namedFn",
  "params": "b, callback, restArgs",
}
`;

exports[`#373 - espree.parse - function namedFn (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": "namedFn",
  "params": "c",
}
`;

exports[`#374 - espree.parse - function namedFn (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": "namedFn",
  "params": "restArgs",
}
`;

exports[`#375 - espree.parse - function namedFn () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": "namedFn",
  "params": "",
}
`;

exports[`#376 - espree.parse - function namedFn(a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#377 - espree.parse - function namedFn(a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#378 - espree.parse - function namedFn(a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#379 - espree.parse - function namedFn(a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a, b",
}
`;

exports[`#380 - espree.parse - function namedFn(a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#381 - espree.parse - function * namedFn (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": "namedFn",
  "params": "a, cb, restArgs",
}
`;

exports[`#382 - espree.parse - function * namedFn (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": "namedFn",
  "params": "b, callback, restArgs",
}
`;

exports[`#383 - espree.parse - function * namedFn (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": "namedFn",
  "params": "c",
}
`;

exports[`#384 - espree.parse - function * namedFn (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": "namedFn",
  "params": "restArgs",
}
`;

exports[`#385 - espree.parse - function * namedFn () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": "namedFn",
  "params": "",
}
`;

exports[`#386 - espree.parse - function * namedFn(a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#387 - espree.parse - function * namedFn(a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#388 - espree.parse - function * namedFn(a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#389 - espree.parse - function * namedFn(a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a, b",
}
`;

exports[`#390 - espree.parse - function * namedFn(a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#391 - espree.parse - (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) => {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": null,
  "params": "a, cb, restArgs",
}
`;

exports[`#392 - espree.parse - (b, callback, ...restArgs) => {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": null,
  "params": "b, callback, restArgs",
}
`;

exports[`#393 - espree.parse - (c) => {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": null,
  "params": "c",
}
`;

exports[`#394 - espree.parse - (...restArgs) => {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": null,
  "params": "restArgs",
}
`;

exports[`#395 - espree.parse - () => {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#396 - espree.parse - (a = (true, false)) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#397 - espree.parse - (a = (true, null)) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#398 - espree.parse - (a = (true, "bar")) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#399 - espree.parse - (a, b = (i++, true)) => {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": null,
  "params": "a, b",
}
`;

exports[`#400 - espree.parse - (a = 1) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#401 - espree.parse - (a) => a * 3 * a 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "a * 3 * a",
  "name": null,
  "params": "a",
}
`;

exports[`#402 - espree.parse - d => d * 355 * d 1`] = `
Object {
  "args": Array [
    "d",
  ],
  "body": "d * 355 * d",
  "name": null,
  "params": "d",
}
`;

exports[`#403 - espree.parse - e => {return e + 5235 / e} 1`] = `
Object {
  "args": Array [
    "e",
  ],
  "body": "return e + 5235 / e",
  "name": null,
  "params": "e",
}
`;

exports[`#404 - espree.parse - (a, b) => a + 3 + b 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "a + 3 + b",
  "name": null,
  "params": "a, b",
}
`;

exports[`#405 - espree.parse - (x, y, ...restArgs) => console.log({ value: x * y }) 1`] = `
Object {
  "args": Array [
    "x",
    "y",
    "restArgs",
  ],
  "body": "console.log({ value: x * y })",
  "name": null,
  "params": "x, y, restArgs",
}
`;

exports[`#406 - espree.parse - async function (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": null,
  "params": "a, cb, restArgs",
}
`;

exports[`#407 - espree.parse - async function (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": null,
  "params": "b, callback, restArgs",
}
`;

exports[`#408 - espree.parse - async function (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": null,
  "params": "c",
}
`;

exports[`#409 - espree.parse - async function (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": null,
  "params": "restArgs",
}
`;

exports[`#410 - espree.parse - async function () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#411 - espree.parse - async function (a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#412 - espree.parse - async function (a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#413 - espree.parse - async function (a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#414 - espree.parse - async function (a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": null,
  "params": "a, b",
}
`;

exports[`#415 - espree.parse - async function (a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#416 - espree.parse - async function namedFn (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": "namedFn",
  "params": "a, cb, restArgs",
}
`;

exports[`#417 - espree.parse - async function namedFn (b, callback, ...restArgs) {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": "namedFn",
  "params": "b, callback, restArgs",
}
`;

exports[`#418 - espree.parse - async function namedFn (c) {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": "namedFn",
  "params": "c",
}
`;

exports[`#419 - espree.parse - async function namedFn (...restArgs) {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": "namedFn",
  "params": "restArgs",
}
`;

exports[`#420 - espree.parse - async function namedFn () {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": "namedFn",
  "params": "",
}
`;

exports[`#421 - espree.parse - async function namedFn(a = (true, false)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#422 - espree.parse - async function namedFn(a = (true, null)) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#423 - espree.parse - async function namedFn(a = (true, "bar")) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#424 - espree.parse - async function namedFn(a, b = (i++, true)) {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a, b",
}
`;

exports[`#425 - espree.parse - async function namedFn(a = 1) {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": "namedFn",
  "params": "a",
}
`;

exports[`#426 - espree.parse - async (a = {foo: "ba)r", baz: 123}, cb, ...restArgs) => {return a * 3} 1`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": "return a * 3",
  "name": null,
  "params": "a, cb, restArgs",
}
`;

exports[`#427 - espree.parse - async (b, callback, ...restArgs) => {callback(null, b + 3)} 1`] = `
Object {
  "args": Array [
    "b",
    "callback",
    "restArgs",
  ],
  "body": "callback(null, b + 3)",
  "name": null,
  "params": "b, callback, restArgs",
}
`;

exports[`#428 - espree.parse - async (c) => {return c * 3} 1`] = `
Object {
  "args": Array [
    "c",
  ],
  "body": "return c * 3",
  "name": null,
  "params": "c",
}
`;

exports[`#429 - espree.parse - async (...restArgs) => {return 321} 1`] = `
Object {
  "args": Array [
    "restArgs",
  ],
  "body": "return 321",
  "name": null,
  "params": "restArgs",
}
`;

exports[`#430 - espree.parse - async () => {} 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#431 - espree.parse - async (a = (true, false)) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#432 - espree.parse - async (a = (true, null)) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#433 - espree.parse - async (a = (true, "bar")) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#434 - espree.parse - async (a, b = (i++, true)) => {} 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "",
  "name": null,
  "params": "a, b",
}
`;

exports[`#435 - espree.parse - async (a = 1) => {} 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "",
  "name": null,
  "params": "a",
}
`;

exports[`#436 - espree.parse - async (a) => a * 3 * a 1`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "a * 3 * a",
  "name": null,
  "params": "a",
}
`;

exports[`#437 - espree.parse - async d => d * 355 * d 1`] = `
Object {
  "args": Array [
    "d",
  ],
  "body": "d * 355 * d",
  "name": null,
  "params": "d",
}
`;

exports[`#438 - espree.parse - async e => {return e + 5235 / e} 1`] = `
Object {
  "args": Array [
    "e",
  ],
  "body": "return e + 5235 / e",
  "name": null,
  "params": "e",
}
`;

exports[`#439 - espree.parse - async (a, b) => a + 3 + b 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "body": "a + 3 + b",
  "name": null,
  "params": "a, b",
}
`;

exports[`#440 - espree.parse - async (x, y, ...restArgs) => console.log({ value: x * y }) 1`] = `
Object {
  "args": Array [
    "x",
    "y",
    "restArgs",
  ],
  "body": "console.log({ value: x * y })",
  "name": null,
  "params": "x, y, restArgs",
}
`;

exports[`#441 - espree.parse - should return object with default values when invalid 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#442 - espree.parse - should have '.isValid' and few '.is*'' hidden properties 1`] = `
Object {
  "args": Array [],
  "body": "",
  "name": null,
  "params": "",
}
`;

exports[`#447 - espree.parse - should work for object methods 1`] = `
Object {
  "args": Array [
    "a",
    "b",
    "c",
  ],
  "body": "
        return 123;
      ",
  "name": "foo",
  "params": "a, b, c",
}
`;

exports[`#447 - espree.parse - should work for object methods 2`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "
        return () => a;
      ",
  "name": "bar",
  "params": "a",
}
`;

exports[`#447 - espree.parse - should work for object methods 3`] = `
Object {
  "args": Array [
    "a",
  ],
  "body": "
        return yield a * 321;
      ",
  "name": "gen",
  "params": "a",
}
`;

exports[`#447 - espree.parse - should work for object methods 4`] = `
Object {
  "args": Array [
    "a",
    "cb",
    "restArgs",
  ],
  "body": " return a * 3 ",
  "name": "namedFn",
  "params": "a, cb, restArgs",
}
`;

exports[`should work with an async arrow function with an \`if\` statement 1`] = `
Object {
  "args": Array [
    "v",
  ],
  "body": " if (v) {} ",
  "name": null,
  "params": "v",
}
`;
